feat: add st7789 driver configured + GPIO EXTI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,10 +15,12 @@ if(WIN32)
 else()
     set(USERHOME $ENV{HOME})
 endif()
+
 set(sdkVersion 2.2.0)
 set(toolchainVersion 14_2_Rel1)
 set(picotoolVersion 2.2.0-a4)
 set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
+
 if (EXISTS ${picoVscode})
     include(${picoVscode})
 endif()
@@ -34,9 +36,26 @@ project(LoRaWAN_RP2040_Dongle C CXX ASM)
 pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
-
 add_executable(LoRaWAN_RP2040_Dongle
-    main.cpp
+    Src/main.c
+    Drivers/st7789/src/st7789.c
+)
+
+# Add the standard library to the build
+target_link_libraries(LoRaWAN_RP2040_Dongle
+    pico_stdlib
+    hardware_spi
+)
+
+# Include directories
+target_include_directories(LoRaWAN_RP2040_Dongle PRIVATE
+    ${CMAKE_CURRENT_LIST_DIR}/Includes
+    ${CMAKE_CURRENT_LIST_DIR}/Drivers/st7789/src/include
+)
+
+# Force l'inclusion de pico/time.h pour le driver st7789 (submodule Git non modifié)
+target_compile_options(LoRaWAN_RP2040_Dongle PRIVATE
+    $<$<COMPILE_LANGUAGE:C>:-include pico/time.h>
 )
 
 pico_set_program_name(LoRaWAN_RP2040_Dongle "LoRaWAN_RP2040_Dongle")
@@ -46,15 +65,4 @@ pico_set_program_version(LoRaWAN_RP2040_Dongle "0.1")
 pico_enable_stdio_uart(LoRaWAN_RP2040_Dongle 0)
 pico_enable_stdio_usb(LoRaWAN_RP2040_Dongle 1)
 
-# Add the standard library to the build
-target_link_libraries(LoRaWAN_RP2040_Dongle
-    pico_stdlib
-)
-
-# Add the standard include files to the build
-target_include_directories(LoRaWAN_RP2040_Dongle PRIVATE
-        ${CMAKE_CURRENT_LIST_DIR}
-)
-
 pico_add_extra_outputs(LoRaWAN_RP2040_Dongle)
-
